2005-10-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* GroupsConfig.pm, HostsConfig.pm, Loader.pl.in, NFSConfig.pm,
	NTPConfig.pm, SMBConfig.pm, ServicesConfig.pm, ShellsConfig.pm,
	TimeConfig.pm, UsersConfig.pm, test-backends: updated everything to
	latest perl DBus bindings API

2005-10-06  Carlos Garnacho Parro  <carlosg@gnome.org>

	* configure.in: changed installation path

2005-10-04  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Network/Hosts.pm: added
	* HostsConfig.pm: ditto
	* ServicesConfig.pm: ditto
	* Init/ServicesList.pm: ditto
	* Init/Services.pm: added code, need to review to see if it works on
	non system V distros
	* Loader.pl.in: added new services

2005-09-17  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Loader.pl.in: add some code to check whether the backends are
	installed and add the install path to @INC in such case. Use
	objects for SMB, NFS and time/date
	* Makefile.am, autogen.sh, configure.in: modified to make the 
	thing actually compile
	* Shares/Makefile.am, Time/Makefile.am, Users/Makefile.am,
	Utils/Makefile.am: added
	* NFSConfig.pm, Shares/NFS.pm: added
	* SMBConfig.pm, Shares/SMB.pm: added
	* TimeConfig.pm, Time/TimeDate.pm: added
	* UsersConfig.pm: fixed a typo
	* Utils/Parse.pm (get_from_ini_bool): return 0 (not undef) if it
	couldn't find the value

2005-08-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Loader.pl.in: use the new objects

2005-08-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Time/NTP.pm: module for handling NTP servers configuration
	* NTPConfig.pm: toplevel object for dealing with NTP config

2005-08-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* test-backends: improved a bit, removed unused code

2005-08-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Users/Groups.pm: module for managing group settings
	* GroupsConfig.pm: toplevel object for dealing with groups

2005-08-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* ShellsConfig.pm: ShellsList object renamed, all exported objects